--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -16,6 +16,10 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField "Boolean", "USE_MOCK_BACKEND_API", 'true'
+        // TODO: Прописать адрес нашего сервера.
+        buildConfigField "String", "BACKEND_API_URL", '""'
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
@@ -48,6 +52,12 @@ android {
     }
 }
 
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
+}
+
 dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
@@ -65,4 +75,21 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+    // HTTP client.
+    def retrofitVersion = "2.9.0"
+    def okhttpVersion = '4.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
+    implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
+    implementation "com.squareup.okhttp3:okhttp-tls:$okhttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
+    // JSON parser.
+    def moshiVersion = '1.14.0'
+    implementation "com.squareup.moshi:moshi:$moshiVersion"
+    implementation "com.squareup.moshi:moshi-adapters:$moshiVersion"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
+
+    // https://github.com/haroldadmin/NetworkResponseAdapter.
+    implementation "com.github.haroldadmin:NetworkResponseAdapter:5.0.0"
 }
