--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -18,7 +18,7 @@ android {
 
         buildConfigField "Boolean", "USE_MOCK_BACKEND_API", 'true'
         // TODO: Прописать адрес нашего сервера.
-        buildConfigField "String", "BACKEND_API_URL", '""'
+        buildConfigField "String", "BACKEND_API_URL", '"http://51.250.98.212:8080/"'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -94,4 +94,12 @@ dependencies {
     implementation "com.github.haroldadmin:NetworkResponseAdapter:5.0.0"
 
     implementation 'androidx.activity:activity-ktx:1.5.1'
+
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    debugImplementation 'com.facebook.flipper:flipper:0.163.0'
+    debugImplementation 'com.facebook.soloader:soloader:0.10.4'
+
+    releaseImplementation 'com.facebook.flipper:flipper-noop:0.163.0'
+    debugImplementation 'com.facebook.flipper:flipper-network-plugin:0.163.0'
 }
