Add handlers of get/post queries

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,10 @@
 .PHONY: build
-
 build:
 	go build -o main -v ./cmd
+
+.PHONY: build-win
+build-win:
+	go build -o main.exe -v ./cmd
 
 .PHONY: deploy
 deploy:
