--- a/server/configs/config.toml
+++ b/server/configs/config.toml
@@ -1,4 +1,4 @@
 bind_address = ":8080"
 log_level = "debug"
-[store]
-database_url = "host=localhost dbname=restapi_dev sslmode=disable"
+[storage]
+database_url = "host=localhost dbname=postgres user=postgres password=123 sslmode=disable"
