--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -7,6 +7,14 @@ plugins {
 
 
 android {
+    signingConfigs {
+        'release' {
+            storeFile file('release.keystore')
+            storePassword '123456'
+            keyAlias '123'
+            keyPassword '123456'
+        }
+    }
     compileSdk 33
 
     defaultConfig {
@@ -28,8 +36,10 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -97,11 +107,10 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    debugImplementation 'com.facebook.flipper:flipper:0.163.0'
-    debugImplementation 'com.facebook.soloader:soloader:0.10.4'
+    implementation 'com.facebook.flipper:flipper:0.163.0'
+    implementation 'com.facebook.soloader:soloader:0.10.4'
+    implementation 'com.facebook.flipper:flipper-network-plugin:0.163.0'
 
-    releaseImplementation 'com.facebook.flipper:flipper-noop:0.163.0'
-    debugImplementation 'com.facebook.flipper:flipper-network-plugin:0.163.0'
     
     def nav_version = "2.5.2"
 
